--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_affidavit.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_affidavit.yml
@@ -151,24 +151,29 @@ subquestion: |
   * did something that made you afraid you were about to be seriously physically harmed.
   
   Include information about injuries, medical treatment or dental treatment you needed, destruction of property, or sometimes, the police.
+  
   % endif
+  
   % if plaintiff_assistant_type_obo and plaintiff_has_minor_children:
   * The judge should also know about:
   
-      * Times ${other_parties.familiar()} abused  ${users.familiar()}'s ${children.as_noun()},
-      * Where  ${users.familiar()}'s ${children.as_noun()} ${children.did_verb('was')} when ${other_parties.familiar()} was abusing  ${users.familiar()},
-      * Times ${users.familiar()}'s ${children.as_noun()} witnessed ${other_parties.familiar()} abusing ${users.familiar()}, and
-      * How the abuse affected  ${users.familiar()}'s ${children.as_noun()}.
+      * Times ${other_parties.familiar()} abused  ${users.familiar()}'s ${(children + children_cares_for).as_noun('children')},
+      * Where  ${users.familiar()}'s ${(children + children_cares_for).as_noun('children')} ${(children + children_cares_for).did_verb('was')} when ${other_parties.familiar()} was abusing  ${users.familiar()},
+      * Times ${users.familiar()}'s ${(children + children_cares_for).as_noun('children')} witnessed ${other_parties.familiar()} abusing ${users.familiar()}, and
+      * How the abuse affected  ${users.familiar()}'s ${(children + children_cares_for).as_noun('children')}.
   
   % endif
+  
   % if plaintiff_has_minor_children and not plaintiff_assistant_type_obo:
   * The judge should also know about:
   
-      * Times ${other_parties.familiar()} abused your ${children.as_noun()},
-      * Where your ${children.as_noun()} ${children.did_verb('was')} when ${other_parties.familiar()} was abusing you,
-      * Times your ${children.as_noun()} witnessed ${other_parties.familiar()} abusing you, and
-      * How the abuse affected your ${children.as_noun()}.
+      * Times ${other_parties.familiar()} abused your ${(children + children_cares_for).as_noun('children')},
+      * Where your ${(children + children_cares_for).as_noun('children')} ${(children + children_cares_for).did_verb('was')} when ${other_parties.familiar()} was abusing you,
+      * Times your ${(children + children_cares_for).as_noun('children')} witnessed ${other_parties.familiar()} abusing you, and
+      * How the abuse affected your ${(children + children_cares_for).as_noun('children')}.
+     
   % endif
+  
 ---
 id: 209A Affidavit you can do it
 continue button field: complaint_209A_Affidavit_intro_3
@@ -257,9 +262,9 @@ subquestion: |
 #         incidents_of_abuse[i].description = incidents_of_abuse[i].police_description
 
 #   if plaintiff_has_minor_children:
-#   #  if incidents_of_abuse[i].injuries_self_child:	
-#     incidents_of_abuse[i].injuries_describe	
-#     if incidents_of_abuse[i].injuries_edit:	
+#   #  if incidents_of_abuse[i].injuries_self_child:  
+#     incidents_of_abuse[i].injuries_describe 
+#     if incidents_of_abuse[i].injuries_edit: 
 #       incidents_of_abuse[i].description = incidents_of_abuse[i].injuries_description
 #   else:
 #     if not incidents_of_abuse[i].injuries:
@@ -383,17 +388,17 @@ fields:
     datatype: noyesradio
     help: |
       % if plaintiff_assistant_type_obo:
-      Were any other children, besides ${users.familiar()} harmed? Think about:	
+      Were any other children, besides ${users.familiar()} harmed? Think about: 
       Times ${ other_parties.familiar() } abused ${users.familiar()}'s children. 
-      Where ${users.familiar()}'s ${children.as_noun()} ${children.did_verb('was')} when ${ other_parties.familiar() } was abusing ${users.familiar()}.
+      Where ${users.familiar()}'s ${(children + children_cares_for).as_noun('children')} ${(children + children_cares_for).did_verb('was')} when ${ other_parties.familiar() } was abusing ${users.familiar()}.
       Times ${users.familiar()}'s children witnessed ${ other_parties.familiar() } abusing ${users.familiar()}, and
-      how the abuse affected ${users.familiar()}'s ${children.as_noun()}.
+      how the abuse affected ${users.familiar()}'s ${(children + children_cares_for).as_noun('children')}.
       % else:
-      Were any children harmed? Think about:	
+      Were any children harmed? Think about:  
       Times ${ other_parties.familiar() } abused your children. 
-      Where your ${children.as_noun()} ${children.did_verb('was')} when ${ other_parties.familiar() } was abusing you.
-      Times your ${children.as_noun()} witnessed ${ other_parties.familiar() } abusing you, and
-      how the abuse affected your ${children.as_noun()}.
+      Where your ${(children + children_cares_for).as_noun('children')} ${(children + children_cares_for).did_verb('was')} when ${ other_parties.familiar() } was abusing you.
+      Times your ${(children + children_cares_for).as_noun('children')} witnessed ${ other_parties.familiar() } abusing you, and
+      how the abuse affected your ${(children + children_cares_for).as_noun('children')}.
       % endif
     show if:
       code: |
@@ -466,12 +471,12 @@ question: |
    Were any children harmed?
 subquestion: |
   % if plaintiff_assistant_type_obo:
-  Think about:	
+  Think about:  
   
-   * Times ${ other_parties.familiar() } abused ${ users.familiar() }'s ${children.as_noun()},
-   * Where ${ users.familiar() }'s ${children.as_noun()} ${children.did_verb('was')} e when ${ other_parties.familiar() } was abusing ${ users.familiar() },
-   * Times ${ users.familiar() } ${children.as_noun()} witnessed ${ other_parties.familiar() } abusing ${ users.familiar() }, and
-   * How the abuse affected ${ users.familiar() } ${children.as_noun()}.
+   * Times ${ other_parties.familiar() } abused ${ users.familiar() }'s ${(children + children_cares_for).as_noun('children')},
+   * Where ${ users.familiar() }'s ${(children + children_cares_for).as_noun('children')} ${(children + children_cares_for).did_verb('was')} e when ${ other_parties.familiar() } was abusing ${ users.familiar() },
+   * Times ${ users.familiar() } ${(children + children_cares_for).as_noun('children')} witnessed ${ other_parties.familiar() } abusing ${ users.familiar() }, and
+   * How the abuse affected ${ users.familiar() } ${(children + children_cares_for).as_noun('children')}.
   
   
   **Note:**
@@ -484,14 +489,14 @@ subquestion: |
   
   This is what you have said so far. 
   
-  Edit it as much as you need, to include how this incident affected ${ users.familiar() }'s ${children.as_noun()}.
+  Edit it as much as you need, to include how this incident affected ${ users.familiar() }'s ${(children + children_cares_for).as_noun('children')}.
   % else:
-  Think about:	
+  Think about:  
   
-   * Times ${ other_parties.familiar() } abused your ${children.as_noun()},
-   * Where your ${children.as_noun()} ${children.did_verb('was')} when ${ other_parties.familiar() } was abusing you,
-   * Times your ${children.as_noun()} witnessed ${ other_parties.familiar() } abusing you, and
-   * How the abuse affected your ${children.as_noun()}.
+   * Times ${ other_parties.familiar() } abused your ${(children + children_cares_for).as_noun('children')},
+   * Where your ${(children + children_cares_for).as_noun('children')} ${(children + children_cares_for).did_verb('was')} when ${ other_parties.familiar() } was abusing you,
+   * Times your ${(children + children_cares_for).as_noun('children')} witnessed ${ other_parties.familiar() } abusing you, and
+   * How the abuse affected your ${(children + children_cares_for).as_noun('children')}.
   
   
   **Note:**
@@ -530,21 +535,21 @@ question: |
   Describe any medical treatment
 subquestion: |
   % if plaintiff_assistant_type_obo and plaintiff_has_minor_children:
-   It may help ${ users.familiar() } to tell the judge about any medical or dental treatment ${ users.familiar() } or ${ users.familiar() }'s ${ children.as_noun() } got. 
+   It may help ${ users.familiar() } to tell the judge about any medical or dental treatment ${ users.familiar() } or ${ users.familiar() }'s ${(children + children_cares_for).as_noun('children')} got. 
 
-  Or, if ${ users.familiar()} or ${ users.familiar()}'s ${ children.as_noun() } needed treatment and did not get it, why not? 
+  Or, if ${ users.familiar()} or ${ users.familiar()}'s ${(children + children_cares_for).as_noun('children')} needed treatment and did not get it, why not? 
   
-  This is what you have said so far. Add a description of the medical treatment ${ users.familiar() } or ${ users.familiar() }'s ${ children.as_noun() } needed and the name of the doctor, hospital or clinic that saw ${ users.familiar() } or ${ users.familiar() }'s ${ children.as_noun() }. 
+  This is what you have said so far. Add a description of the medical treatment ${ users.familiar() } or ${ users.familiar() }'s ${(children + children_cares_for).as_noun('children')} needed and the name of the doctor, hospital or clinic that saw ${ users.familiar() } or ${ users.familiar() }'s ${(children + children_cares_for).as_noun('children')}. 
     
-  If there was a reason ${ users.familiar() } or ${ users.familiar() }'s ${ children.as_noun() } could not get medical treatment, you may want to write about that.
+  If there was a reason ${ users.familiar() } or ${ users.familiar() }'s ${(children + children_cares_for).as_noun('children')} could not get medical treatment, you may want to write about that.
   
   % elif plaintiff_has_minor_children and not plaintiff_assistant_type_obo:
-  It may help you to tell the judge about any medical or dental treatment you or your ${ children.as_noun() } got. 
+  It may help you to tell the judge about any medical or dental treatment you or your ${(children + children_cares_for).as_noun('children')} got. 
 
-  Or, if you or your ${ children.as_noun() } needed treatment and did not get it, why not?
-  This is what you have said so far. Add a description of the medical treatment you or your ${ children.as_noun() } needed and the name of the doctor, hospital or clinic that saw you or your ${ children.as_noun() }. 
+  Or, if you or your ${(children + children_cares_for).as_noun('children')} needed treatment and did not get it, why not?
+  This is what you have said so far. Add a description of the medical treatment you or your ${(children + children_cares_for).as_noun('children')} needed and the name of the doctor, hospital or clinic that saw you or your ${(children + children_cares_for).as_noun('children')}. 
     
-  If there was a reason you or your ${ children.as_noun() } could not get medical treatment, you may want to write about that.
+  If there was a reason you or your ${(children + children_cares_for).as_noun('children')} could not get medical treatment, you may want to write about that.
   
   % elif plaintiff_assistant_type_obo and not plaintiff_has_minor_children:
   
@@ -933,14 +938,14 @@ code: |
 # ---
 # id: 209A Affidavit you or child injuries described
 # question: |
-#   Did you include harm to you or your ${children.as_noun()}?
+#   Did you include harm to you or your ${(children + children_cares_for).as_noun('children')}?
 # subquestion: |  
-#   Think about:	
+#   Think about:  
 #   
-#   * Times ${ other_parties.familiar() } abused your ${children.as_noun()},
-#   * Where your ${children.as_noun()} ${children.did_verb('was')} when ${ other_parties.familiar() } was abusing you,
-#   * Times your ${children.as_noun()} witnessed ${ other_parties.familiar() } abusing you, and
-#   * How the abuse affected your ${children.as_noun()}.
+#   * Times ${ other_parties.familiar() } abused your ${(children + children_cares_for).as_noun('children')},
+#   * Where your ${(children + children_cares_for).as_noun('children')} ${(children + children_cares_for).did_verb('was')} when ${ other_parties.familiar() } was abusing you,
+#   * Times your ${(children + children_cares_for).as_noun('children')} witnessed ${ other_parties.familiar() } abusing you, and
+#   * How the abuse affected your ${(children + children_cares_for).as_noun('children')}.
 #   
 #   
 #   **Note:**
@@ -951,7 +956,7 @@ code: |
 #   * Report the abuse to the Department of Children and Families (DCF) who would probably start an investigation, or 
 #   * Do both.
 #   
-#   Did you already describe any injuries that ${ other_parties.familiar() } caused you or your ${children.as_noun()}?
+#   Did you already describe any injuries that ${ other_parties.familiar() } caused you or your ${(children + children_cares_for).as_noun('children')}?
 #   
 #   Injuries do not need to be serious.
 #   
@@ -1050,11 +1055,11 @@ fields:
 #   % if plaintiff_has_minor_children:
 #   You said you have at least 1 child under 18. 
   
-#   Even if ${other_parties.familiar()} did not injure your ${children.as_noun()}, it could be important to include:
+#   Even if ${other_parties.familiar()} did not injure your ${(children + children_cares_for).as_noun('children')}, it could be important to include:
   
 #   * Where your child was during the incident.
-#   * If your ${children.as_noun()} witnessed anything. And
-#   * How it affected your ${children.as_noun()}. 
+#   * If your ${(children + children_cares_for).as_noun('children')} witnessed anything. And
+#   * How it affected your ${(children + children_cares_for).as_noun('children')}. 
 #   % endif
 # yesno: incidents_of_abuse.there_is_another
 ---
